--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -13,7 +13,7 @@
     "nice": "schön!",
     "about": "über mich",
     "language": "Sprache",
-    "asAFullstack": "Als Fullstack Entwickler. mit Erfahrung in der Web- und Mobilentwicklung ist es meine Leidenschaft, Lösungen für schwierige Probleme zu finden und mein Fachwissen mit anderen zu teilen.",
+    "asAFullstack": "Als Fullstack Entwickler mit Erfahrung in der Web- und Mobilentwicklung ist es meine Leidenschaft, Lösungen für schwierige Probleme zu finden und mein Fachwissen mit anderen zu teilen.",
     "moreAboutMe": "Ich bin bestrebt, qualitativ hochwertige Lösungen zu entwickeln und meine Fähigkeiten kontinuierlich zu verbessern. Mit einer soliden Grundlage in der Front-End-Entwicklung und Erfahrung in der Entwicklung mobiler Apps habe ich eine Leidenschaft für Software und Technologie und bin bestrebt, mit den neuesten Best Practices auf dem Laufenden zu bleiben. In meiner Freizeit arbeite ich ehrenamtlich bei HiCoders, wo ich Lernvideos erstelle und Hausaufgaben vorbereite, um den Teilnehmern zu helfen. Ich bin immer auf der Suche nach Möglichkeiten, zu lernen und mich weiterzuentwickeln, und ich hoffe, dass ich mit meinen Fähigkeiten einen positiven Beitrag in diesem Bereich leisten kann.",
     "myCareer": "Meine Karriere als Programmierer",
     "volunteer": "Freiwilliger bei NGG",
